syntax = "proto3";

option csharp_namespace = "RaftCore";

service RaftMessagingService {
  rpc Vote (VoteRequest) returns (VoteResponse);
}

message VoteRequest
{
    int32 term = 1;
    string candidateId = 2;
    int32 lastLogIndex = 3;
    int32 lastLogTerm = 4;
}

message VoteResponse
{
    int32 term = 1;
    bool voteGranted = 2;
}